Add settings for google login

--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.h2.console.enabled=true
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.security.oauth2.client.registration.google.client-id=587294541496-h0lvij4jvqp68h8ge98puv86p10ucs4l.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
