--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -5,7 +5,10 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.sql.init.data-locations= classpath:/data.sql
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 spring.security.oauth2.client.registration.google.client-id=587294541496-h0lvij4jvqp68h8ge98puv86p10ucs4l.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
