--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -10,5 +10,6 @@ spring.sql.init.data-locations= classpath:/data.sql
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-spring.security.oauth2.client.registration.google.client-id=587294541496-h0lvij4jvqp68h8ge98puv86p10ucs4l.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=587294541496-r6luhkak37jglebppoes2f6fqm9nopvs.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
