--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "leaflet": "^1.9.2",
     "leaflet-geosearch": "^3.7.0",
     "leaflet-routing-machine": "^3.2.12",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "tailwindcss": "^3.2.2",
     "tslib": "^2.3.0",
@@ -34,8 +35,8 @@
     "@angular-devkit/build-angular": "^14.2.6",
     "@angular/cli": "~14.2.6",
     "@angular/compiler-cli": "^14.2.0",
-    "@types/jasmine": "~4.0.0",
     "@types/google.maps": "^3.50.2",
+    "@types/jasmine": "~4.0.0",
     "@types/leaflet": "^1.9.0",
     "@types/leaflet-routing-machine": "^3.2.4",
     "jasmine-core": "~4.3.0",
