--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -34,7 +34,8 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "@typescript-eslint/no-explicit-any": "warn"
       }
     },
     {
